@@ -1,56 +1,28 @@
 using Domain.DTOs;
 using Domain.Entities;
 using Domain.Interfaces.Repositories;
-using Domain.Interfaces.Services;
 
 namespace Domain.Services;
 
-public abstract class Service<TEntity>: IService<TEntity> where TEntity : Entity
+public abstract class Service<TEntity> where TEntity : Entity
 {
     private readonly IRepository<TEntity> Repository;
 
     protected Service(IRepository<TEntity> repository)
-    {
-        Repository = repository;
-    }
-    
-    public virtual async Task<DomainValidation> AddAsync(TEntity entity)
-    {
-        if (!entity.DomainValidation.IsValid())
-            return entity.DomainValidation;
-            
-        await Repository.InsertAsync(entity);
+        => Repository = repository;
 
-        return null;
-    }
+    public virtual async Task AddAsync(TEntity entity)
+        => await Repository.InsertAsync(entity);
 
-    public virtual async Task<DomainValidation> UpdateAsync(TEntity entity)
-    {
-        if (!entity.DomainValidation.IsValid())
-            return entity.DomainValidation;
-        
-        await Repository.UpdateAsync(entity);
-        
-        return null;
-    }
+    public virtual async Task UpdateAsync(TEntity entity)
+        => await Repository.UpdateAsync(entity);
 
-    public virtual async Task<DomainValidation> RemoveAsync(TEntity entity)
-    {
-        if (!entity.DomainValidation.IsValid())
-            return entity.DomainValidation;
-        
-        await Repository.DeleteAsync(entity);
-        
-        return null;
-    }
+    public virtual async Task RemoveAsync(TEntity entity)
+        => await Repository.DeleteAsync(entity);
 
     public virtual async Task<TEntity> GetByIdAsync(long id)
-    {
-        return await Repository.GetByIdAsync(id);
-    }
+        => await Repository.GetByIdAsync(id);
 
     public virtual async Task<PaginatedResultDto> GetByPaginatedAsync(int pageNumber = 1, int pageSize = 25)
-    {
-        return await Repository.GetByPaginatedAsync(pageNumber: pageNumber, pageSize: pageSize);
-    }
+        => await Repository.GetByPaginatedAsync(pageNumber: pageNumber, pageSize: pageSize);
 }
