@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnSql": "User ID=postgres;Password=RGV1cyBzZWphIGxvdXZhZG8g;Host=localhost;Port=5432;Database=olympic_web;Pooling=true;Connection Lifetime=300;",
+    "ConnSql": "User ID=postgres;Password=RGV1cyBzZWphIGxvdXZhZG8g;Host=localhost;Port=5432;Database=nautilus;Pooling=true;Connection Lifetime=300;",
     "ConnCache": "localhost"
   },
   "Logging": {
