@@ -14,14 +14,12 @@ public class EntityTypeConfiguration<TEntity> : IEntityTypeConfiguration<TEntity
 
         builder.Property(p => p.Id).HasColumnName("Id");
 
-        builder.Property(p => p.CreatedOn).IsRequired().HasColumnName("Created").HasColumnType("DATETIME");
+        builder.Property(p => p.CreatedOn).IsRequired().HasColumnName("CreatedOn").HasColumnType("DATETIME");
 
         builder.Property(p => p.CreatedBy).IsRequired().HasColumnName("CreatedBy").HasMaxLength(255).HasColumnType("VARCHAR(255)");
 
-        builder.Property(p => p.ModifiedOn).IsRequired(false).HasColumnName("LastModified").HasColumnType("DATETIME");
+        builder.Property(p => p.ModifiedOn).IsRequired(false).HasColumnName("ModifiedOn").HasColumnType("DATETIME");
 
-        builder.Property(p => p.ModifiedBy).IsRequired(false).HasColumnName("LastModifiedBy").HasMaxLength(255).HasColumnType("VARCHAR(255)");
-        
-        builder.Ignore(e => e.DomainValidation);
+        builder.Property(p => p.ModifiedBy).IsRequired(false).HasColumnName("ModifiedBy").HasMaxLength(255).HasColumnType("VARCHAR(255)");
     }
 }
