@@ -1,0 +1,13 @@
+using Domain.Entities;
+
+namespace Domain.Validations;
+
+public class %##%Validator : AbstractValidator<%##%>
+{
+    public %##%Validator()
+    {
+        RuleFor(c => c.Name)
+            .NotEmpty().WithMessage("Please ensure you have entered the Name")
+            .Length(2, 150).WithMessage("The Name must have between 2 and 150 characters");
+    }
+}
